--- a/charts/molgenis-cron/values.yaml
+++ b/charts/molgenis-cron/values.yaml
@@ -11,6 +11,7 @@ cleanup:
     repository: rancher
     name: cli2
   commands:
+    - "rancher context switch edge-molgenis"
     - "rancher app | awk '{print $2}' | grep preview- > preview.list"
     - "xargs rancher app delete < preview.list" 
     
