--- a/charts/molgenis-cron/values.yaml
+++ b/charts/molgenis-cron/values.yaml
@@ -10,8 +10,5 @@ cleanup:
     tag: v2.2.0
     repository: rancher
     name: cli2
-  commands:
-    - "rancher context switch edge-molgenis"
-    - "rancher app | awk '{print $2}' | grep preview- > preview.list"
-    - "xargs rancher app delete < preview.list" 
+  project: edge-molgenis
     
