--- a/charts/molgenis-prometheus/questions.yml
+++ b/charts/molgenis-prometheus/questions.yml
@@ -10,3 +10,8 @@ questions:
     label: "Prometheus User Password"
     description: "Password for the prometheus user on MOLGENIS deployments."
     type: string
+  - variable: "secret.GITHUBTOKEN"
+    required: true
+    label: "Github token"
+    description: "Github token for MOLGENIS deployments."
+    type: string
