--- a/charts/molgenis-prometheus/questions.yml
+++ b/charts/molgenis-prometheus/questions.yml
@@ -1,17 +1,21 @@
 questions:
+  - variable: 'environment.cluster'
+    required: true
+    label: cluster
+    default: development
+    type: enum
+    options:
+      - production
+      - development
+    description: "Cluster"
   - variable: 'prometheus.alertmanagerFiles.alertmanager\.yml.global.slack_api_url'
     required: true
     default: "https://hooks.slack.com/services/..."
     label: "Slack API URL"
-    description: "Can be found on https://molgenisdev.slack.com/services/BFLLSRULF"
-    type: string
-  - variable: "secret.molgenisMetrics"
-    required: true
-    label: "Prometheus User Password"
-    description: "Password for the prometheus user on MOLGENIS deployments."
+    description: "For development: Can be found on https://molgenisdev.slack.com/services/BFLLSRULF \nFor production: Can be found on https://molgenisops.slack.com/services/B8X3ZFG07"
     type: string
   - variable: "secret.GITHUBTOKEN"
     required: true
     label: "Github token"
-    description: "Github token for MOLGENIS deployments."
+    description: "Github token for MOLGENIS deployments. Only if cluster is set to production. Otherwise set xxxx"
     type: string
