--- a/charts/molgenis-prometheus/templates/getTargets-cronjob.yaml
+++ b/charts/molgenis-prometheus/templates/getTargets-cronjob.yaml
@@ -9,6 +9,7 @@ spec:
       template:
         spec:
           containers:
+          {{ if eq .Values.environment.cluster production }}
           - name: get-targets
             image: alpine:latest
             envFrom:
@@ -18,3 +19,4 @@ spec:
             args: ["-c", "apk add curl bash && curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.15.5/bin/linux/amd64/kubectl && chmod +x kubectl && mv kubectl /usr/local/bin/kubectl && TOKEN=$(cat /run/secrets/kubernetes.io/serviceaccount/token) && wget ${GITHUBTOKEN}@raw.githubusercontent.com/molgenis/molgenis-ops-helm/master/charts/molgenis-prometheus-prod/scripts/k8sScrapeTargetExtractor.sh -O k8sScrapeTargetExtractor.sh && chmod +x k8sScrapeTargetExtractor.sh && bash k8sScrapeTargetExtractor.sh ${GITHUBTOKEN} && rm -rf /mnt/k8sScrapeTargetExtractor.sh"]
           serviceAccountName: update-configmap-bot
           restartPolicy: OnFailure
+          {{ end }}
