--- a/charts/molgenis-prometheus/values.yaml
+++ b/charts/molgenis-prometheus/values.yaml
@@ -89,7 +89,7 @@ prometheus:
   serverFiles:
     alerts:
       groups:
-        {{ if eq .Values.environment.cluster production }}
+        {{- if eq .Values.environment.cluster production }}
         - name: nodes
           rules:
             - alert: "Instance or node_exporter Down"
@@ -204,7 +204,7 @@ prometheus:
         - /etc/config/rules
         - /etc/config/alerts
       scrape_configs:
-        {{ if eq .Values.environment.cluster production }}
+        {{- if eq .Values.environment.cluster production }}
         - job_name: 'masterBranchNodes'
           file_sd_configs:
             - files:
@@ -222,7 +222,7 @@ prometheus:
             - files:
               - /etc/configProm/01TargetsAcquired.yml
         {{ end }}
-        {{ if eq .Values.environment.cluster development }}
+        {{- if eq .Values.environment.cluster development }}
         - job_name: jenkins
           metrics_path: '/prometheus/'
           scheme: https
@@ -496,7 +496,6 @@ prometheus:
               action: replace
               target_label: kubernetes_pod_name
 secret:
-  molgenisMetrics: "xxxx"
   GITHUBTOKEN: "xxxx"
 environment:
   cluster: development
