--- a/charts/molgenis-prometheus/questions.yml
+++ b/charts/molgenis-prometheus/questions.yml
@@ -2,11 +2,11 @@ questions:
   - variable: 'environment.cluster'
     required: true
     label: cluster
-    default: development
+    default: "development"
     type: enum
     options:
-      - production
-      - development
+      - "production"
+      - "development"
     description: "Cluster"
   - variable: 'prometheus.alertmanagerFiles.alertmanager\.yml.global.slack_api_url'
     required: true
