--- a/charts/molgenis-prometheus/values.yaml
+++ b/charts/molgenis-prometheus/values.yaml
@@ -16,7 +16,7 @@ prometheus:
       receivers:
         - name: default-receiver
           slack_configs:
-            {{- if eq .Values.environment.cluster "development" }}
+            {{ if eq .Values.environment.cluster "development" }}
             - channel: '#prometheus'
               send_resolved: true
               text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
@@ -89,7 +89,7 @@ prometheus:
   serverFiles:
     alerts:
       groups:
-        {{- if eq .Values.environment.cluster "production" }}
+        {{ if eq .Values.environment.cluster "production" }}
         - name: nodes
           rules:
             - alert: "Instance or node_exporter Down"
@@ -222,7 +222,7 @@ prometheus:
             - files:
               - /etc/configProm/01TargetsAcquired.yml
         {{ end }}
-        {{- if eq .Values.environment.cluster "development" }}
+        {{ if eq .Values.environment.cluster "development" }}
         - job_name: jenkins
           metrics_path: '/prometheus/'
           scheme: https
