--- a/charts/molgenis-prometheus/values.yaml
+++ b/charts/molgenis-prometheus/values.yaml
@@ -16,16 +16,16 @@ prometheus:
       receivers:
         - name: default-receiver
           slack_configs:
-            {{ if and .Values.environment.cluster (eq .Values.environment.cluster "development") }}
+            {{- if eq .Values.environment.cluster "development"}}
             - channel: '#prometheus'
               send_resolved: true
               text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
-            {{ end }}
-            {{ if and .Values.environment.cluster ( eq .Values.environment.cluster "production") }}
+            {{- end}}
+            {{- if eq .Values.environment.cluster "production"}}
             - channel: '#alerts'
               send_resolved: true
               text: "{{ range .Alerts }}{{ .Annotations.summary }}\n{{ .Annotations.message }}\n{{ end }}"
-            {{ end }}
+            {{- end}}
       route:
         group_wait: 10s
         group_interval: 5m
@@ -89,7 +89,7 @@ prometheus:
   serverFiles:
     alerts:
       groups:
-        {{ if and .Values.environment.cluster (eq .Values.environment.cluster "production") }}
+        {{- if eq .Values.environment.cluster "production"}}
         - name: nodes
           rules:
             - alert: "Instance or node_exporter Down"
@@ -182,7 +182,7 @@ prometheus:
                 severity: warning
                 summary: "Swap is filling up (instance {{ $labels.instance }})"
                 message: "Swap is filling up (>80%)\n  VALUE = {{ $value }}\nBranch: {{ $labels.branch }}\nProject: {{ $labels.project }}\nDTAP: {{ $labels.dtap }}"
-        {{ end }}
+        {{- end}}
         - name: nodes
           rules:
             - alert: "Node Down"
@@ -204,7 +204,7 @@ prometheus:
         - /etc/config/rules
         - /etc/config/alerts
       scrape_configs:
-        {{- if and .Values.environment.cluster (eq .Values.environment.cluster "production") }}
+        {{- if eq .Values.environment.cluster "production"}}
         - job_name: 'masterBranchNodes'
           file_sd_configs:
             - files:
@@ -221,14 +221,14 @@ prometheus:
           file_sd_configs:
             - files:
               - /etc/configProm/01TargetsAcquired.yml
-        {{ end }}
-        {{ if and .Values.environment.cluster (eq .Values.environment.cluster "development") }}
+        {{- end}}
+        {{- if eq .Values.environment.cluster "development"}}
         - job_name: jenkins
           metrics_path: '/prometheus/'
           scheme: https
           static_configs:
             - targets: ['jenkins.dev.molgenis.org:443']
-        {{ end }}
+        {{- end}}
         - job_name: prometheus
           static_configs:
             - targets:
