feat(prometheus) removed if statement job_name

--- a/charts/molgenis-prometheus/values.yaml
+++ b/charts/molgenis-prometheus/values.yaml
@@ -195,9 +195,27 @@ prometheus:
         - /etc/config/rules
         - /etc/config/alerts
       scrape_configs:
-        envFrom:
-          - configMapRef:
-            name: scrape-config-configmap
+        - job_name: 'masterBranchNodes'
+          file_sd_configs:
+            - files:
+              - /etc/configProm/masterTargetsAcquired.yml
+        - job_name: '20BranchNodes'
+          file_sd_configs:
+            - files:
+              - /etc/configProm/20TargetsAcquired.yml
+        - job_name: '10BranchNodes'
+          file_sd_configs:
+            - files:
+              - /etc/configProm/10TargetsAcquired.yml
+        - job_name: '01BranchNodes'
+          file_sd_configs:
+            - files:
+              - /etc/configProm/01TargetsAcquired.yml
+        - job_name: jenkins
+          metrics_path: '/prometheus/'
+          scheme: https
+          static_configs:
+            - targets: ['jenkins.dev.molgenis.org:443']
         - job_name: prometheus
           static_configs:
             - targets:
