--- a/charts/molgenis-prometheus/values.yaml
+++ b/charts/molgenis-prometheus/values.yaml
@@ -16,9 +16,23 @@ prometheus:
       receivers:
         - name: default-receiver
           slack_configs:
+            env:
+              - name: chType
+                valueFrom:
+                  configMapKeyRef:
+                    name: slack-configmap
+                    key: chType
+              - name: chText
+                valueFrom:
+                  configMapKeyRef:
+                    name: slack-configmap
+                    key: chText
             envFrom:
               - configMapRef:
                 name: slack-configmap
+            - channel: $chType
+              send_resolved: true
+              text: $chText
       route:
         group_wait: 10s
         group_interval: 5m
