--- a/charts/molgenis-prometheus/values.yaml
+++ b/charts/molgenis-prometheus/values.yaml
@@ -27,12 +27,9 @@ prometheus:
                   configMapKeyRef:
                     name: slack-configmap
                     key: chText
-            envFrom:
-              - configMapRef:
-                  name: slack-configmap
-            - channel: $chType
+            - channel: $(chType)
               send_resolved: true
-              text: $chText
+              text: $(chText)
       route:
         group_wait: 10s
         group_interval: 5m
