--- a/charts/molgenis-prometheus/values.yaml
+++ b/charts/molgenis-prometheus/values.yaml
@@ -9,17 +9,20 @@ prometheus:
       requests:
         cpu: 10m
         memory: 32Mi
-    env:
-    - name: chType
-      valueFrom:
-        configMapKeyRef:
-          name: slack-configmap
-          key: chType
-    - name: chText
-      valueFrom:
-        configMapKeyRef:
-          name: slack-configmap
-          key: chText
+    envFrom:
+    - configMapRef:
+        name: slack-configmap
+    # env:
+    # - name: chType
+    #   valueFrom:
+    #     configMapKeyRef:
+    #       name: slack-configmap
+    #       key: chType
+    # - name: chText
+    #   valueFrom:
+    #     configMapKeyRef:
+    #       name: slack-configmap
+    #       key: chText
   alertmanagerFiles:
     alertmanager.yml:
       global:
