--- a/charts/molgenis-prometheus/templates/getTargets-cronjob.yaml
+++ b/charts/molgenis-prometheus/templates/getTargets-cronjob.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.environment.cluster "production"}}
+{{ if eq .Values.environment.cluster "production" }}
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
@@ -19,4 +19,4 @@ spec:
             args: ["-c", "apk add curl bash && curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.15.5/bin/linux/amd64/kubectl && chmod +x kubectl && mv kubectl /usr/local/bin/kubectl && TOKEN=$(cat /run/secrets/kubernetes.io/serviceaccount/token) && wget ${GITHUBTOKEN}@raw.githubusercontent.com/molgenis/molgenis-ops-helm/master/charts/molgenis-prometheus-prod/scripts/k8sScrapeTargetExtractor.sh -O k8sScrapeTargetExtractor.sh && chmod +x k8sScrapeTargetExtractor.sh && bash k8sScrapeTargetExtractor.sh ${GITHUBTOKEN} && rm -rf /mnt/k8sScrapeTargetExtractor.sh"]
           serviceAccountName: update-configmap-bot
           restartPolicy: OnFailure
-{{- end}}
+{{ end }}
