--- a/charts/molgenis-prometheus/templates/slack-configmap.yaml
+++ b/charts/molgenis-prometheus/templates/slack-configmap.yaml
@@ -3,11 +3,11 @@ kind: ConfigMap
 metadata:
   name: slack-configmap
 data:
-  {{- if eq .Values.environment.cluster "development"}}
+  {{ if eq .Values.environment.cluster "development" }}
   chType: "'#prometheus'"
   chText: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
-  {{- end}}
-  {{- if eq .Values.environment.cluster "production"}}
+  {{ end }}
+  {{ if eq .Values.environment.cluster "production" }}
   chType: "'#alerts'"
   chText: "{{ range .Alerts }}{{ .Annotations.summary }}\n{{ .Annotations.message }}\n{{ end }}"
-  {{- end}}
+  {{ end }}
