--- a/charts/molgenis-prometheus/templates/getTargets-cronjob.yaml
+++ b/charts/molgenis-prometheus/templates/getTargets-cronjob.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.environment.cluster "production" -}}
+{{- if eq .Values.environment "production" -}}
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
