feat(prometheus) changed illegal reference configmap

--- a/charts/molgenis-prometheus/templates/alertManager-configmap.yaml
+++ b/charts/molgenis-prometheus/templates/alertManager-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: alertManager-configmap
+  name: alertmanager-configmap
 data:
 {{- if eq .Values.environment "production" -}}
   alertmanager.yml: |
