--- a/charts/molgenis-prometheus/templates/alertManager-configmap.yaml
+++ b/charts/molgenis-prometheus/templates/alertManager-configmap.yaml
@@ -9,10 +9,10 @@ data:
       slack_api_url: ''
     receivers:
       - name: default-receiver
-        slack_configs:
+        slack_configs: >
           - channel: '#alerts'
             send_resolved: true
-            text: "{{ range .Alerts }}{{ .Annotations.summary }}\n{{ .Annotations.message }}\n{{ end }}"
+            text: |- {{`{{ range .Alerts }}{{ .Annotations.summary }}\n{{ .Annotations.message }}\n{{ end }}`}}
     route:
       group_wait: 10s
       group_interval: 5m
@@ -25,10 +25,10 @@ data:
       slack_api_url: ''
     receivers:
       - name: default-receiver
-        slack_configs:
+        slack_configs: >
           - channel: '#prometheus'
             send_resolved: true
-            text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
+            text: |- {{`{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}`}}
     route:
       group_wait: 10s
       group_interval: 5m
