--- a/charts/molgenis-prometheus/templates/alertManager-configmap.yaml
+++ b/charts/molgenis-prometheus/templates/alertManager-configmap.yaml
@@ -3,35 +3,35 @@ kind: ConfigMap
 metadata:
   name: alertmanager-configmap
 data:
-  {{- if eq .Values.environment "production" -}}
-    alertmanager.yml:
-      global:
-        slack_api_url: ''
-      receivers:
-        - name: default-receiver
-          slack_configs: >
-            - channel: '#alerts'
-              send_resolved: true
-              text: |- {{`{{ range .Alerts }}{{ .Annotations.summary }}\n{{ .Annotations.message }}\n{{ end }}`}}
-      route:
-        group_wait: 10s
-        group_interval: 5m
-        receiver: default-receiver
-        repeat_interval: 3h
-  {{- end -}}
-  {{- if eq .Values.environment "development" -}}
-    alertmanager.yml:
-      global:
-        slack_api_url: ''
-      receivers:
-        - name: default-receiver
-          slack_configs: >
-            - channel: '#prometheus'
-              send_resolved: true
-              text: |- {{`{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}`}}
-      route:
-        group_wait: 10s
-        group_interval: 5m
-        receiver: default-receiver
-        repeat_interval: 3h
-  {{- end -}}
+  {{ if eq .Values.environment "production" -}}
+  alertmanager.yml: |
+    global:
+      slack_api_url: ''
+    receivers:
+      - name: default-receiver
+        slack_configs: >
+          - channel: '#alerts'
+            send_resolved: true
+            text: |- {{`{{ range .Alerts }}{{ .Annotations.summary }}\n{{ .Annotations.message }}\n{{ end }}`}}
+    route:
+      group_wait: 10s
+      group_interval: 5m
+      receiver: default-receiver
+      repeat_interval: 3h
+  {{ end -}}
+  {{ if eq .Values.environment "development" -}}
+  alertmanager.yml: |
+    global:
+      slack_api_url: ''
+    receivers:
+      - name: default-receiver
+        slack_configs: >
+          - channel: '#prometheus'
+            send_resolved: true
+            text: |- {{`{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}`}}
+    route:
+      group_wait: 10s
+      group_interval: 5m
+      receiver: default-receiver
+      repeat_interval: 3h
+  {{ end -}}
