--- a/charts/molgenis-prometheus/values.yaml
+++ b/charts/molgenis-prometheus/values.yaml
@@ -57,7 +57,6 @@ prometheus:
       requests:
         cpu: 1
         memory: 6Gi
-    configMapOverrideName: "serverfiles-configmap"
   configmapReload:
     resources:
       limits:
@@ -66,7 +65,146 @@ prometheus:
       requests:
         cpu: 100m
         memory: 64Mi
-  
+  serverFiles:
+    alerts:
+      groups:
+        - name: virtualmachines
+          rules:
+            - alert: "Instance or node_exporter Down"
+              expr: up == 0
+              annotations:
+                severity: "ERROR"
+                summary: "Instance or node_exporter Down"
+                message: "Instance or node_exporter of {{$labels.instance}} is down\nBranch: {{ $labels.branch }}\nProject: {{ $labels.project }}\nDTAP: {{ $labels.dtap }}"
+            - alert: OutOfMemory
+              expr: node_memory_MemFree / node_memory_MemTotal * 100 < 10
+              for: 5m
+              annotations:
+                severity: warning
+                summary: "Out of memory (instance {{ $labels.instance }})"
+                message: "Node memory is filling up (< 10% left)\n  VALUE = {{ $value }}\nBranch: {{ $labels.branch }}\nProject: {{ $labels.project }}\nDTAP: {{ $labels.dtap }}"
+            - alert: UnusualNetworkThroughputIn
+              expr: sum by (instance) (irate(node_network_receive_bytes[2m])) / 1024 / 1024 > 100
+              for: 5m
+              annotations:
+                severity: warning
+                summary: "Unusual network throughput in (instance {{ $labels.instance }})"
+                message: "Host network interfaces are probably receiving too much data (> 100 MB/s)\n  VALUE = {{ $value }}\nBranch: {{ $labels.branch }}\nProject: {{ $labels.project }}\nDTAP: {{ $labels.dtap }}"
+            - alert: UnusualNetworkThroughputOut
+              expr: sum by (instance) (irate(node_network_transmit_bytes[2m])) / 1024 / 1024 > 100
+              for: 5m
+              annotations:
+                severity: warning
+                summary: "Unusual network throughput out (instance {{ $labels.instance }})"
+                message: "Host network interfaces are probably sending too much data (> 100 MB/s)\n  VALUE = {{ $value }}\nBranch: {{ $labels.branch }}\nProject: {{ $labels.project }}\nDTAP: {{ $labels.dtap }}"
+            - alert: UnusualDiskReadRate
+              expr: sum by (instance) (irate(node_disk_read_bytes[2m])) / 1024 / 1024 > 50
+              for: 5m
+              annotations:
+                severity: warning
+                summary: "Unusual disk read rate (instance {{ $labels.instance }})"
+                message: "Disk is probably reading too much data (> 50 MB/s)\n  VALUE = {{ $value }}\nBranch: {{ $labels.branch }}\nProject: {{ $labels.project }}\nDTAP: {{ $labels.dtap }}"
+            - alert: UnusualDiskWriteRate
+              expr: sum by (instance) (irate(node_disk_written_bytes[2m])) / 1024 / 1024 > 50
+              for: 5m
+              annotations:
+                severity: warning
+                summary: "Unusual disk write rate (instance {{ $labels.instance }})"
+                message: "Disk is probably writing too much data (> 50 MB/s)\n  VALUE = {{ $value }}\nBranch: {{ $labels.branch }}\nProject: {{ $labels.project }}\nDTAP: {{ $labels.dtap }}"
+            - alert: OutOfDiskSpace
+              expr: node_filesystem_free_bytes{mountpoint ="/rootfs"} / node_filesystem_size_bytes{mountpoint ="/rootfs"} * 100 < 10
+              for: 5m
+              annotations:
+                severity: warning
+                summary: "Out of disk space (instance {{ $labels.instance }})"
+                message: "Disk is almost full (< 10% left)\n  VALUE = {{ $value }}\nBranch: {{ $labels.branch }}\nProject: {{ $labels.project }}\nDTAP: {{ $labels.dtap }}"
+            - alert: OutOfInodes
+              expr: node_filesystem_files_free{mountpoint ="/rootfs"} / node_filesystem_files{mountpoint ="/rootfs"} * 100 < 10
+              for: 5m
+              annotations:
+                severity: warning
+                summary: "Out of inodes (instance {{ $labels.instance }})"
+                message: "Disk is almost running out of available inodes (< 10% left)\n  VALUE = {{ $value }}\nBranch: {{ $labels.branch }}\nProject: {{ $labels.project }}\nDTAP: {{ $labels.dtap }}"
+            - alert: UnusualDiskReadLatency
+              expr: rate(node_disk_read_time_ms[1m]) / rate(node_disk_reads_completed[1m]) > 100
+              for: 5m
+              annotations:
+                severity: warning
+                summary: "Unusual disk read latency (instance {{ $labels.instance }})"
+                message: "Disk latency is growing (read operations > 100ms)\n  VALUE = {{ $value }}\nBranch: {{ $labels.branch }}\nProject: {{ $labels.project }}\nDTAP: {{ $labels.dtap }}"
+            - alert: UnusualDiskWriteLatency
+              expr: rate(node_disk_write_time_ms[1m]) / rate(node_disk_writes_completed[1m]) > 100
+              for: 5m
+              annotations:
+                severity: warning
+                summary: "Unusual disk write latency (instance {{ $labels.instance }})"
+                message: "Disk latency is growing (write operations > 100ms)\n  VALUE = {{ $value }}\nBranch: {{ $labels.branch }}\nProject: {{ $labels.project }}\nDTAP: {{ $labels.dtap }}"
+            - alert: HighCpuLoad
+              expr: 100 - (avg by(instance) (irate(node_cpu{mode="idle"}[5m])) * 100) > 80
+              for: 5m
+              annotations:
+                severity: warning
+                summary: "High CPU load (instance {{ $labels.instance }})"
+                message: "CPU load is > 80%\n  VALUE = {{ $value }}\nBranch: {{ $labels.branch }}\nProject: {{ $labels.project }}\nDTAP: {{ $labels.dtap }}"
+            - alert: ContextSwitching
+              expr: rate(node_context_switches[5m]) > 1000
+              for: 5m
+              annotations:
+                severity: warning
+                summary: "Context switching (instance {{ $labels.instance }})"
+                message: "Context switching is growing on node (> 1000 / s)\n  VALUE = {{ $value }}\nBranch: {{ $labels.branch }}\nProject: {{ $labels.project }}\nDTAP: {{ $labels.dtap }}"
+            - alert: SwapIsFillingUp
+              expr: (1 - (node_memory_SwapFree / node_memory_SwapTotal)) * 100 > 80
+              for: 5m
+              annotations:
+                severity: warning
+                summary: "Swap is filling up (instance {{ $labels.instance }})"
+                message: "Swap is filling up (>80%)\n  VALUE = {{ $value }}\nBranch: {{ $labels.branch }}\nProject: {{ $labels.project }}\nDTAP: {{ $labels.dtap }}"
+        - name: nodes
+          rules:
+            - alert: "Node Down"
+              expr: up{job="kubernetes-nodes"} == 0
+              annotations:
+                miqTarget: "ContainerNode"
+                severity: "ERROR"
+                message: "Node {{$labels.instance}} is down"
+        - name: pods
+          rules:
+            - alert: "Pod OOMKilled"
+              expr: kube_pod_container_status_terminated_reason{reason='OOMKilled'} == 1
+              annotations:
+                severity: "WARN"
+                message: "Pod {{$labels.container}} in namespace {{$labels.namespace}} got OOMKilled."
+    rules: {}
+    prometheus.yml:
+      rule_files:
+        - /etc/config/rules
+        - /etc/config/alerts
+      scrape_configs:
+        - job_name: 'masterBranchNodes'
+          file_sd_configs:
+            - files:
+              - /etc/configProm/*TargetsAcquired.yml
+        # - job_name: '30BranchNodes'
+        #   file_sd_configs:
+        #     - files:
+        #       - /etc/configProm/30TargetsAcquired.yml
+        # - job_name: '20BranchNodes'
+        #   file_sd_configs:
+        #     - files:
+        #       - /etc/configProm/20TargetsAcquired.yml
+        # - job_name: '10BranchNodes'
+        #   file_sd_configs:
+        #     - files:
+        #       - /etc/configProm/10TargetsAcquired.yml
+        # - job_name: '01BranchNodes'
+        #   file_sd_configs:
+        #     - files:
+        #       - /etc/configProm/01TargetsAcquired.yml
+        - job_name: 'developmentPods'
+          file_sd_configs:
+            - files:
+              - /etc/configProm/developmentpods.yml
   extraScrapeConfigs: |
     - job_name: prometheus
       static_configs:
