--- a/charts/molgenis-prometheus/templates/alertManager-configmap.yaml
+++ b/charts/molgenis-prometheus/templates/alertManager-configmap.yaml
@@ -28,7 +28,7 @@ data:
         slack_configs: >
           - channel: '#prometheus'
             send_resolved: true
-            text: |- {{`{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}`}}
+            text: |- {{`{{ range .Alerts }}{{ .Annotations.summary }}\n{{ .Annotations.message }}\n{{ end }}`}}
     route:
       group_wait: 10s
       group_interval: 5m
