--- a/charts/molgenis-prometheus/values.yaml
+++ b/charts/molgenis-prometheus/values.yaml
@@ -12,6 +12,7 @@ prometheus:
     configMapOverrideName: "alertmanager-configmap"
 
   kubeStateMetrics:
+    enabled: false
     nodeSelector:
       deployPod: "true"
     resources:
@@ -23,6 +24,7 @@ prometheus:
         memory: 64Mi
 
   nodeExporter:
+    enabled: false
     resources:
       limits:
         cpu: 200m
