fix(prometheus) removed deploypods temporary

--- a/charts/molgenis-prometheus/values.yaml
+++ b/charts/molgenis-prometheus/values.yaml
@@ -14,7 +14,7 @@ prometheus:
   kubeStateMetrics:
     enabled: false
     nodeSelector:
-      deployPod: "true"
+      deployPod: "false"
     resources:
       limits:
         cpu: 10m
