--- a/charts/molgenis-prometheus/values.yaml
+++ b/charts/molgenis-prometheus/values.yaml
@@ -47,6 +47,11 @@ prometheus:
   server:
     nodeSelector:
       deployPod: "true"
+    extraConfigmapMounts:
+      - name: serverfiles
+        configMapName: serverfiles-configmap
+        mountPath: /etc/config
+        readOnly: true
     resources:
       limits:
         cpu: 1
