--- a/charts/molgenis-prometheus/templates/serverfiles-configmap.yaml
+++ b/charts/molgenis-prometheus/templates/serverfiles-configmap.yaml
@@ -170,8 +170,8 @@ data:
             labels:
               severity: "WARN"
             annotations:
-              summary: {{ printf "Volume out of disk space (instance {{ $labels.instance }})" }}
-              message: {{ printf "Volume is almost full (< 10% left)\\n  VALUE = {{ $value }}\\n  LABELS: {{ $labels }}" }}
+              summary: {{ printf "\"Volume out of disk space (instance {{ $labels.instance }})\"" }}
+              message: {{ printf "\"Volume is almost full (< 10% left)\\n  VALUE = {{ $value }}\\n  LABELS: {{ $labels }}\"" }}
           - alert: VolumeFullInFourDays
             expr: 100 * (kubelet_volume_stats_available_bytes / kubelet_volume_stats_capacity_bytes) < 15 and predict_linear(kubelet_volume_stats_available_bytes[6h], 4 * 24 * 3600) < 0
             for: 5m
