fix(data platform): add default value for data platform url

--- a/charts/lifelines-edge/questions.yml
+++ b/charts/lifelines-edge/questions.yml
@@ -59,6 +59,7 @@ questions:
     group: CRM
   - variable: dataPlatform.url
     label: Lifelines data platform URL
+    default: "https://acc-dp.lifelines.nl:8080"
     type: string
     required: true
     group: Data platform
